--- a/social_media_api/requirements.txt
+++ b/social_media_api/requirements.txt
@@ -1,11 +1,14 @@
-asgiref==3.10.0
-Django==5.2.7
-django-csp==4.0
-django-filter==25.2
-django-taggit==6.1.0
+asgiref==3.11.0
+dj-database-url==3.0.1
+Django==6.0
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
-gunicorn==23.0.0
+drf-yasg==1.21.11
+inflection==0.5.1
 packaging==25.0
+pillow==12.0.0
 PyJWT==2.10.1
-sqlparse==0.5.3
+pytz==2025.2
+PyYAML==6.0.3
+sqlparse==0.5.4
+uritemplate==4.2.0
